# Dreadbots2024

./: .gitignore  README.md  apriltag_test.py  build.gradle  calibrate.py  cs.py  detector.py  field.yaml  intrinsics.yaml  norm_detector.py  note_detection.py  rebuild-timeturner.sh  start.sh  test.py
.Glass/: glass.json
.pathplanner/: settings.json
.wpilib/: wpilib_preferences.json
layouts/: AdvantageScope_ARCLayout.json
logs/: Log_24-04-04_15-18-39.2.wpilog  Log_24-04-04_17-18-25_p0.wpilog  Log_24-04-04_20-40-26.wpilog  Log_24-04-05_08-22-28.wpilog  Log_24-04-05_08-29-31.wpilog  Log_24-04-05_11-20-48.wpilog  Log_24-04-05_13-54-36.wpilog  Log_24-04-05_14-58-37.wpilog  Log_24-04-05_16-02-23.wpilog  Log_24-04-05_16-42-48.wpilog  Log_24-04-05_19-27-30.wpilog  Log_24-04-06_08-29-26.wpilog  Log_24-04-06_08-29-46.wpilog  Log_24-04-06_08-31-12.wpilog  Log_24-04-06_09-56-17.wpilog  Log_24-04-06_10-02-48.wpilog  Log_24-04-06_10-08-52.wpilog  Log_24-04-06_10-31-15.wpilog  Log_24-04-06_11-17-36.wpilog  Log_24-04-17_15-56-18_q26292.wpilog  Log_24-04-17_15-57-39.wpilog  Log_24-04-17_19-43-38.wpilog  Log_24-04-17_20-16-52.wpilog  Log_24-04-18_10-50-13.wpilog  Log_24-04-18_12-03-15.wpilog  Log_24-04-18_14-54-08_q43876.wpilog  Log_24-04-18_16-07-47.wpilog  Log_24-04-18_18-32-08.wpilog  Log_24-04-19_08-22-29.wpilog  Log_24-04-19_09-38-24.wpilog  Log_24-04-19_10-48-41.wpilog  Log_24-04-19_14-16-29.wpilog  (+1 more)
timeturner/: Cargo.toml  pyproject.toml  timeturner.h
timeturner-server/: .gitignore  Cargo.toml
timeturner-server/src/: main.rs
timeturner/src/: lib.rs  main.rs
(+155 files in other folders)
