[package]
name = "timeturner"
version = "0.1.0"
edition = "2021"

[lib]
name = "timeturner"
crate-type = ["rlib", "cdylib"]

[features]
default = ["python"]
python = ["pyo3"]
pyo3 = ["dep:pyo3"]

[dependencies]
interprocess = { version = "1.2.1", features = ["tokio_support"] }
pyo3 = { version = "0.21.0", optional = true, features = ["extension-module"] }
